tests/ui/alloc-error/alloc-error-handler-bad-signature-1.stderr
error[E0308]: mismatched types
  --> $DIR/alloc-error-handler-bad-signature-1.rs:11:5
   |
LL |   #[alloc_error_handler]
   |   ---------------------- in this procedural macro expansion
LL | / fn oom(
LL | |     info: &Layout,
   | |     ^^^^^^^^^^^^^ expected `&Layout`, found `Layout`
LL | | ) -> ()
LL | | {
LL | |     loop {}
LL | | }
   | |_- arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/alloc-error-handler-bad-signature-1.rs:10:4
   |
LL | fn oom(
   |    ^^^
LL |     info: &Layout,
   |     -------------
   = note: this error originates in the attribute macro `alloc_error_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/alloc-error-handler-bad-signature-1.rs:12:6
   |
LL |   #[alloc_error_handler]
   |   ---------------------- in this procedural macro expansion
LL | / fn oom(
LL | |     info: &Layout,
LL | | ) -> ()
   | |      ^^ expected `!`, found `()`
LL | | {
LL | |     loop {}
LL | | }
   | |_- expected `!` because of return type
   |
   = note:   expected type `!`
           found unit type `()`
   = note: this error originates in the attribute macro `alloc_error_handler` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
